# dynamo

./: .clang-format  .coderabbit.yaml  .dockerignore  .gitattributes  .gitignore  .lycheeignore  .pre-commit-config.yaml  ATTRIBUTIONS-Go.md  ATTRIBUTIONS-Python.md  ATTRIBUTIONS-Rust.md  ATTRIBUTIONS-container-frontend.md  ATTRIBUTIONS.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DCO.md  LICENSE  README.md  codespell.txt  deny.toml  dynamo.code-workspace  hatch_build.py
benchmarks/: README.md  pyproject.toml
benchmarks/burstgpt_loadgen/: README.md  convert.py
benchmarks/frontend/: README.md
benchmarks/frontend/dgd/templates/: mocker.yaml  vllm-gpt-oss-20b.yaml  vllm.yaml
benchmarks/frontend/scripts/: README.md  run_perf.sh  scaling-test.md  sweep_runner.py
benchmarks/frontend/scripts/analysis/: create_report.py  frontend_perf_analysis.py  parsing_util.py
benchmarks/frontend/scripts/bpf/: README.md  run.sh  setup.sh
benchmarks/frontend/scripts/flamegraph/: README.md  cpu_flamegraph.sh  diff_flamegraph.sh  offcpu_flamegraph.sh
benchmarks/frontend/scripts/nsight/: nsys_profile.sh
benchmarks/frontend/scripts/sweep_core/: __init__.py  artifacts.py  config.py  failures.py  lifecycle.py  models.py  naming.py  orchestrator.py  planner.py  reporting.py
benchmarks/frontend/scripts/sweep_executors/: __init__.py  base.py  k8s_dgd.py  local.py
benchmarks/frontend/scripts/sweep_k8s/: __init__.py  aiperf.py  dgd.py  kubectl.py  metrics.py  template.py
benchmarks/incluster/: benchmark_job.yaml
benchmarks/llm/: README.md  nginx.conf  perf.sh  plot_pareto.py
benchmarks/multimodal/: local_media_server.py
benchmarks/multimodal/embedding_transfer/: protocol.py  receiver.py  sender.py  trigger.py
benchmarks/multimodal/generate_aiperf_images/: README.md  args.py  main.py
benchmarks/multimodal/image/: aiperf_large_image.sh  aiperf_small_image.sh  aiperf_small_image_50_isl_ratio.sh
benchmarks/multimodal/jsonl/: README.md  args.py  generate_images.py  generate_input_text.py  main.py
benchmarks/multimodal/sweep/: README.md  __main__.py  args.py  config.py  orchestrator.py  runner.py  server.py
benchmarks/multimodal/sweep/workflows/: vllm_serve.sh
benchmarks/nat_trace/: README.md  common.py  convert.py  convert_telemetry.py
benchmarks/omni/image/: aiperf_image_gen.sh
benchmarks/prefix_data_generator/: README.md  __init__.py  cli.py  graph_utils.py  logging_utils.py  prefix_analyzer.py  sampler.py  synthesizer.py
benchmarks/prefix_data_generator/tests/: conftest.py  mock_server.py  test_roundtrip_hashes.py  test_sampler.py  test_synthesizer.py
benchmarks/router/: README.md  agent_benchmark.py  common.py  ping.sh  prefix_ratio_benchmark.py  real_data_benchmark.py  real_data_priority_benchmark.py  run_engines.sh
benchmarks/sin_load_generator/: README.md  sin_synth.py
lib/bench/: Cargo.toml  README.md  multiturn_bench.rs  offline_replay_bench.rs
lib/bench/kv_router/: active_sequences_bench.rs  kv_indexer_bench.rs  mooncake_bench.rs
lib/bench/kv_router/common/: mod.rs
lib/bench/src/: common.rs  lib.rs
lib/bindings/c/: Cargo.toml  build.rs  cbindgen.toml
lib/bindings/c/src/: lib.rs
lib/bindings/kvbm/: Cargo.toml  README.md  pyproject.toml
lib/bindings/python/: .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml
lib/config/: Cargo.toml
lib/config/src/: lib.rs
lib/ext-proc/: Cargo.toml  build.rs
lib/ext-proc/proto/: envoy_ext_proc.proto
lib/ext-proc/src/: config.rs  lib.rs  main.rs  routing.rs  service.rs  worker_map.rs
lib/gpu_memory_service/: README.md  __main__.py  pyproject.toml  setup.py
lib/gpu_memory_service/cli/: __init__.py  args.py  runner.py  server.py  storage_runner.py
lib/gpu_memory_service/client/: memory_manager.py  rpc.py  session.py
lib/gpu_memory_service/common/: cuda_utils.py  locks.py  utils.py
lib/gpu_memory_service/failover_lock/: __init__.py  interface.py
lib/gpu_memory_service/server/: allocations.py  fsm.py  gms.py  rpc.py  session.py
lib/gpu_memory_service/snapshot/: disk.py  model.py  restore.py  storage_client.py
lib/gpu_memory_service/tests/: test_failover_lock.py  test_runtime_flows.py  test_torch_integration.py
lib/kv-router/: Cargo.toml  README.md
lib/kv-router/src/: active_set.rs  cleanup.rs  lib.rs  protocols.rs  test_utils.rs  zmq_wire.rs
lib/kvbm-common/: Cargo.toml
lib/kvbm-common/src/: lib.rs
lib/kvbm-config/: Cargo.toml
lib/kvbm-config/src/: cache.rs  discovery.rs  events.rs  lib.rs  messenger.rs  nixl.rs  object.rs  offload.rs  onboard.rs  rayon.rs  tokio.rs
lib/kvbm-engine/: CLAUDE.md  Cargo.toml  README.md
lib/kvbm-engine/docs/: architecture.md  leader.md  object.md  offload-developer.md  offload.md  onboarding.md  runtime.md  session.md  testing.md  worker-group.md  worker.md
lib/kvbm-engine/scripts/: bench_viewer.html  test-s3.sh
lib/kvbm-engine/src/: lib.rs
lib/kvbm-kernels/: CLAUDE.md  Cargo.toml  README.md  build.rs
lib/kvbm-kernels/cuda/: stubs.c  tensor_kernels.cu
lib/kvbm-kernels/examples/: kvbench.rs
lib/kvbm-kernels/src/: lib.rs  tensor_kernels.rs
lib/kvbm-kernels/tests/: kernel_roundtrip.rs  memcpy_batch.rs  stub_build.rs
lib/kvbm-logical/: CLAUDE.md  Cargo.toml  README.md
lib/kvbm-logical/docs/: advancements.md
lib/kvbm-logical/src/: lib.rs  pubsub.rs  tinylfu.rs
lib/kvbm-physical/: Cargo.toml  README.md
lib/kvbm-physical/docs/: v1_migration.md
lib/kvbm-physical/src/: lib.rs
lib/llm/: Cargo.toml  build.rs
lib/llm/benches/: README.md  kv_router_bench.rs  tokenizer_dataset.rs  tokenizer_simple.rs  transfer_context_v2.rs
lib/llm/src/: backend.rs  block_manager.md  block_manager.rs  common.rs  cuda.rs  discovery.rs  endpoint_type.rs  engines.rs  entrypoint.rs  fpm_publisher.rs  grpc.rs  http.rs  hub.rs  kv.rs  kv_router.rs  lib.rs  local_model.rs  lora.rs  migration.rs  mocker.rs  model_card.rs  model_type.rs  namespace.rs  perf.rs  preprocessor.rs  protocols.rs  recorder.rs  request_template.rs  tokenizers.rs  tokens.rs  types.rs
lib/llm/tests/: aggregators.rs  audit_nats_integration.rs  backend.rs
(+1999 files in other folders)
