# SPDX-FileCopyrightText: Copyright (c) 2024-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "kvbm-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "KVBM Configuration Library for Tokio, Rayon, and Messenger runtimes"

[features]
default = []
rayon = ["dep:rayon"]
nvtx = ["dep:nvtx"]

[dependencies]
anyhow = { workspace = true }
figment = { version = "0.10", features = ["env", "toml", "json"] }
nix = { version = "0.30.1", features = ["net"] }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true }

# Optional dependencies
rayon = { version = "1.10", optional = true }
nvtx = { version = "1.3", optional = true }

# Velo dependencies
velo = { workspace = true }

# Memory dependencies (for NixL)
dynamo-memory = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
temp-env = { version = "0.3.6" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
