# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "libdynamo_llm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "dynamo_llm_capi"
crate-type = ["cdylib", "staticlib"]

[build-dependencies]
cbindgen = "0.27"

[dependencies]
dynamo-kv-router = { path = "../../kv-router" }
dynamo-runtime = { path = "../../runtime" }

anyhow = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

async-once-cell = { version = "0.5.4" }
libc = { version = "0.2" }
once_cell = { version = "1" }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[target.'cfg(target_os = "linux")'.dependencies]
dynamo-llm = { path = "../../llm" }

[target.'cfg(not(target_os = "linux"))'.dependencies]
dynamo-llm = { path = "../../llm", default-features = false }
