# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


[project]
name = "kvbm"
version = "1.1.0"
description = "Dynamo KVBM"
readme = "README.md"
authors = [
    { name = "NVIDIA Inc.", email = "sw-dl-dynamo@nvidia.com" },
]
license = { text = "Apache-2.0" }
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "nixl[cu12]==0.10.1",
    "pydantic>=2.0"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: POSIX :: Linux",
]
keywords = ["llm", "genai", "inference", "nvidia", "kvcache", "dynamo"]

[project.optional-dependencies]
cu12 = ["nixl[cu12]==0.10.1"]
cu13 = ["nixl[cu13]==0.10.1"]
dev = [
    "maturin>=1.0,<2.0",
    "patchelf",
]

[tool.maturin]
module-name = "kvbm._core"
manifest-path = "Cargo.toml"
python-packages = ["kvbm"]
python-source = "python"
# Skip auditwheel here - we'll run it manually in dynamo/container/Dockerfile with exclusions
skip-auditwheel = true

[build-system]
requires = ["maturin>=1.0,<2.0", "patchelf"]
build-backend = "maturin"

