# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[workspace]
# empty workspace to exclude from top level workspace
# excluded due to pyo3 extension module build issues

[package]
name = "dynamo-py3"
version = "1.1.0"
edition = "2024"
authors = ["NVIDIA"]
license = "Apache-2.0"
homepage = "https://github.com/ai-dynamo/dynamo"
repository = "https://github.com/ai-dynamo/dynamo.git"

[lib]
path = "rust/lib.rs"
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
# "rlib" is necessary to support doctests.
crate-type = ["cdylib", "rlib"]

[features]
default = []
media-ffmpeg = ["dynamo-llm/media-ffmpeg"]
kv-indexer = ["dep:clap", "dep:tracing-subscriber"]
kv-indexer-metrics = ["kv-indexer", "dynamo-kv-router/metrics"]
nvtx = ["dynamo-runtime/nvtx"]

[dependencies]
dynamo-runtime = { path = "../../runtime" }
dynamo-mocker = { path = "../../mocker" }
dynamo-parsers = { path = "../../parsers" }

anyhow = { version = "1" }
async-trait = { version = "0.1" }
dashmap = { version = "6.1" }
futures = { version = "0.3" }
rmp = { version = "0.8" }
once_cell = { version = "1.20.3" }
parking_lot = { version = "0.12.4" }
serde = { version = "1" }
serde_json = { version = "1.0.138" }
thiserror = { version = "2.0" }
tokio = { version = "1.46.0", features = ["full"] }
tokio-stream = { version = "0" }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = { version = "0" }
uuid = { version = "1.18.1" }

# kv-indexer / shared kv-router types
dynamo-kv-router = { path = "../../kv-router", features = ["standalone-indexer"] }
clap = { version = "4.5", features = ["derive"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py310" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.10, which is the minimum version in pyproject.toml
pyo3 = { version = "0.23.4", default-features = false, features = [
  "macros",
  "experimental-async",
  "experimental-inspect",
  "extension-module",
  "py-clone",
  "abi3-py310"
] }

pyo3-async-runtimes = { version = "0.23.0", default-features = false, features = [
  "attributes",
  "testing",
  "tokio-runtime",
  "unstable-streams",
] }

pythonize = "0.23"


[target.'cfg(target_os = "linux")'.dependencies]
dynamo-llm = { path = "../../llm" }

[target.'cfg(not(target_os = "linux"))'.dependencies]
dynamo-llm = { path = "../../llm", default-features = false }

[dev-dependencies]

[profile.profiling]
inherits = "release"
debug = true
strip = false
