# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dynamo-codegen"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
# quote = "1.0"
proc-macro2 = "1.0"
anyhow = "1.0"

[[bin]]
name = "gen-python-prometheus-names"
path = "src/gen_python_prometheus_names.rs"
